welcome.lessons.welcome.variables.Variables.scala.error
Variables:16: error: type mismatch;
 found   : Unit
 required: Boolean
if (nbPas2=nbPas) {
          ^